// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`widget-message redux actions basic actions #resetWidgetState should reset the widget 1`] = `
Array [
  Object {
    "type": "widget-message/RESET_WIDGET_STATE",
  },
]
`;

exports[`widget-message redux actions basic actions #setScrollPosition should set the scroll position 1`] = `
Array [
  Object {
    "payload": Object {
      "scrollPosition": Object {
        "scrollPosition": 0,
      },
    },
    "type": "widget-message/SET_SCROLL_POSITION",
  },
]
`;

exports[`widget-message redux actions basic actions #updateWidgetState should store the activity types 1`] = `
Array [
  Object {
    "payload": Object {
      "state": Object {
        "mocked": true,
      },
    },
    "type": "widget-message/UPDATE_WIDGET_STATE",
  },
]
`;

exports[`widget-message redux actions has exported actions 1`] = `
Object {
  "RESET_WIDGET_STATE": "widget-message/RESET_WIDGET_STATE",
  "SET_SCROLL_POSITION": "widget-message/SET_SCROLL_POSITION",
  "UPDATE_WIDGET_STATE": "widget-message/UPDATE_WIDGET_STATE",
  "confirmDeleteActivity": [Function],
  "deleteActivityAndDismiss": [Function],
  "hideDeleteModal": [Function],
  "resetWidgetState": [Function],
  "setScrollPosition": [Function],
  "setScrolledUp": [Function],
  "showScrollToBottomButton": [Function],
  "updateHasNewMessage": [Function],
  "updateWidgetState": [Function],
}
`;

exports[`widget-message redux actions thunked actions #showScrollToBottomButton should update widget state to show scroll button 1`] = `
Array [
  Object {
    "payload": Object {
      "state": Object {
        "showScrollToBottomButton": true,
      },
    },
    "type": "widget-message/UPDATE_WIDGET_STATE",
  },
]
`;
